--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
 
 
-    <div >
+    <div>
         <div class="containers">
             <div class="services my-5 mx-3">
                 <div class="line"></div>
@@ -107,51 +107,51 @@
                     <div class="row">
                         <div class="col-md-4 service-card-container">
                             <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
                             </div>
                         </div>
                         <div class="col-md-4 service-card-container">
                             <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
                             </div>
                         </div>
                         <div class="col-md-4 service-card-container">
                             <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4 service-card-container">
-                            <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 service-card-container">
-                            <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 service-card-container">
-                            <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 service-card-container">
                             <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
                             </div>
                         </div>
                         <div class="col-md-4 service-card-container">
                             <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quo illum doloremque earum magnam deserunt distinctio laudantium, ipsa commodi ex. Magnam corporis doloremque sunt, fugit quis consequuntur officia dicta quas labore! Repellendus voluptatibus pariatur ipsum aliquid similique itaque perferendis quis voluptatem incidunt aut illum quia accusamus, iusto velit laborum eveniet!</p>
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
                             </div>
                         </div>
                         <div class="col-md-4 service-card-container">
                             <div class="service-card">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p>
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 service-card-container">
+                            <div class="service-card">
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 service-card-container">
+                            <div class="service-card">
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quo illum doloremque earum magnam deserunt distinctio laudantium, ipsa commodi ex. Magnam corporis doloremque sunt, fugit quis consequuntur officia dicta quas labore! Repellen dus voluptatibus pariatur ipsum aliquid similique itaque perferendis quis voluptatem incidunt aut illum quia accusamus, iusto velit laborum eveniet!</p></div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 service-card-container">
+                            <div class="service-card">
+                                <div class="service-card-txt-cont"><p class="service-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, necessitatibus dolores id quibusdam excepturi tempora laboriosam aliquid nihil enim iure, nesciunt dignissimos facere porro illum dolore impedit libero beatae in.</p></div>
                             </div>
                         </div>
                     </div>
@@ -160,6 +160,77 @@
             </div>
         </div>
     </div>
+
+
+    <div style="background-color: rgba(255,193,25,0.2);">
+        <div class="containers py-5 px-4" style="flex-wrap: wrap;">
+            <div class="row py-2" style="width:1100px;">
+                <div class="col-md-6 py-2 px-2">
+                    <div class="contact-us-cards d-flex align-items-center justify-content-center">Contact card</div>
+                </div>
+                <div class="col-md-3 py-2 px-2">
+                    <div class="contact-us-cards d-flex align-items-center justify-content-center">Contact card</div>
+                </div>
+                <div class="col-md-3 py-2 px-2">
+                    <div class="contact-us-cards d-flex align-items-center justify-content-center">Contact card</div>
+                </div>
+            </div>
+            <div class="row py-2 px-2" style="width:1100px;">
+                <iframe class="col-md-6 py-0 px-0 my-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.1738456897716!2d77.26481892921528!3d28.548874398903187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce34dc8669b0f%3A0x4cb6ddd41e5f29d5!2sNSIC%20Exhibition%20Ground!5e0!3m2!1sen!2sin!4v1677923626230!5m2!1sen!2sin"  style="border:2px solid rgba(255,193,25,1);border-radius: 5px;padding: 0px 0px;min-height: 450px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="col-md-6 my-2 contactus-cont1">
+                    <div class="contact-us px-3 py-3" style="border: 2px solid rgba(255,193,25,1);border-radius: 5px;height: 100%;">
+                        <div class="line"></div>
+                        <h2>Ask Us Anything</h2>
+                        <div>
+                            <form onsubmit="sendemail(); reset(); return false;">
+                                <div class="row py-1">
+                                    <label for="exampleInputName">Name</label>
+                                    <div class="col">
+                                    <input type="text" class="form-control" placeholder="First name" id="fname">
+                                    </div>
+                                    <div class="col">
+                                    <input type="text" class="form-control" placeholder="Last name" id="lname">
+                                    </div>
+                                </div>
+                                <div class="form-group py-1">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                </div>
+                                <div class="form-group py-1">
+                                    <label for="exampleFormControlTextarea1">Message</label>
+                                    <textarea class="form-control" id="Message" rows="5"></textarea>
+                                </div>
+                                <br/>
+                                <button type="submit" class="btn btn-warning px-5">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div>
+        <div class="containers">
+            <div class="rev-container my-5 mx-3">
+                <div class="rev my-2 mx-2 py-3 px-3">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente corporis placeat, ratione aut, et optio recusandae fugiat sunt corrupti iure blanditiis debitis fugit laborum hic repudiandae aperiam eveniet in nobis.
+                </div>
+                <div class="rev my-2 mx-2 py-3 px-3">
+                    Lorem ipsum dolor sit am Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi enim temporibus odio velit expedita vel obcaecati optio laboriosam eos saepe doloribus similique, ut, eveniet deleniti accusantium, incidunt voluptas fugit tempora! et consectetur, adipisicing elit. Sapiente corporis placeat, ratione aut, et optio recusandae fugiat sunt corrupti iure blanditiis debitis fugit laborum hic repudiandae aperiam eveniet in nobis.
+                </div>
+                <div class="rev my-2 mx-2 py-3 px-3">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente corporis placeat, ratione aut, et optio recusandae fugiat sunt corrupti iure blanditiis debitis fugit laborum hic repudiandae aperiam eveniet in nobis.
+                </div>
+                <div class="rev my-2 mx-2 py-3 px-3">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente corporis placeat, ratione aut, et optio recusandae fugiat sunt corrupti iure blanditiis debitis fugit laborum hic repudiandae aperiam eveniet in nobis.
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
