--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <title>Document</title>
@@ -32,26 +33,28 @@
         </div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/Screenshot 2023-03-15 at 11.05.11 AM.png" class="nav-ico">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end;">
                     <ul class="navbar-nav">
                         <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link active" href="#">About</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link active" href="#">Services</a>
+                            <a class="nav-link" href="#">Services</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link active" href="#">Career</a>
+                            <a class="nav-link" href="#">Career</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link active" href="#">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -67,11 +70,10 @@
                 <source src="assets/video_earth.mp4"/>
             </video>
             <div class="mx-3 welcome-txt">
-                <h1 class="welcome-heading">WELCOME TO INESA SECURITY SERVICES INC.</h1>
+                <h1 class="welcome-heading">WELCOME TO HIGH VAULT SECURITY</h1>
                 <h4 class="welcome-para">
-                    Inesa security services incorporation, aims to perfect the safety and security experience. Here, we have pledged to
-                    prioritize the client's needs, extending beyond just the security. As a part of Inesa, we are dedicated to being highly
-                    efficient and hardworking.
+                    Here at High Vault Security where we are committed to providing our clients with superior security solutions that are suited to their specific requirements.
+                    We recognise the significance of preserving what is most important to you, and we work hard to preserve your piece of mind.
                 </h4>
                 <button class="my-3 welcome-btn">GET STARTED</button>
             </div>
@@ -79,11 +81,11 @@
     </div>
 
 
-    <div style="background-color: rgba(255,193,25,0.2);">
+    <div style="background-color: rgba(35,33,90,0.92); color:white">
         <div class="containers">
             <div class="about mx-3 my-5 row">
                 <div class="col-md-6 about-txt">
-                    <h1 class="heading" style="font-style: normal;">About Us</h1>
+                    <h1 class="heading" style="font-style: normal;">The High Vault Security</h1>
                     <p class="text-justify">Our experienced security officers are on duty around-the-clock. Depending on your needs, you can either use On-Site Guarding as a standalone service on a long-term or short-term basis, or you can design a special security package.</p>
                     <p class="text-justify">To guarantee the safety and security of your operational business, our trained security guards receive top-notch training and support from cutting-edge technology. We put time and effort into a thorough selection procedure that involves extensive background assessments.</p>
                     <p class="text-justify">Modern, cutting-edge technology that enables real-time monitoring of guards while they are on duty. Walking patrols inside the site and close by can be used for tracking. Mobile patrol enables round-the- clock tracking to guarantee quick/active guard reaction.</p>
